tests/error/type_match/base_case_tuple_mismatched_elem_count1.bz
// error: unable to match type '[i32, f64, str]' to '[i32, f64]'
// note: mismatched tuple element counts: 3 and 2
function test()
{
	let _: [i32, f64] = [i32, f64, str]();
}
